# OLAPExecutor

./: .gitignore  CMakeLists.txt  README.md
scripts/: GenerateParquet.cmd  GenerateParquetTestData.py
src/: main.cpp  pch.h
src/Benchmarking/: BenchmarkRunner.cpp  BenchmarkRunner.h
src/Misc/: Logger.h
src/OperatorImpl/: Filter.cpp  Filter.h  FilterOperator.cpp  FilterOperator.h  MemoryScanOperator.cpp  MemoryScanOperator.h  Operator.h  ScanOperator.cpp  ScanOperator.h
src/OperatorImpl/AggregateFunctions/: MinOperator.cpp  MinOperator.h  SumOperator.cpp  SumOperator.h
